纠正了之前的手机和电视的名称错误,

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,7 +142,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="电视模式 (20.5:9 比例)"
+            android:text="开始电视模式16:9"
             android:textSize="16sp" />
 
         <Switch
